// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack plugin baseline 1`] = `
Array [
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [],
    "chunks": Array [],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "development": true,
      "size": 331477,
    },
    "isOverSizeLimit": false,
    "name": "bundle-stats.html",
    "related": Object {},
    "size": 331477,
    "type": "asset",
  },
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [],
    "chunks": Array [],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "development": true,
      "size": 300,
    },
    "isOverSizeLimit": false,
    "name": "../node_modules/.cache/bundle-stats/baseline.json",
    "related": Object {},
    "size": 300,
    "type": "asset",
  },
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [
      "main",
    ],
    "chunks": Array [
      179,
    ],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "javascriptModule": false,
      "minimized": true,
      "size": 27,
    },
    "isOverSizeLimit": false,
    "name": "main.js",
    "related": Object {},
    "size": 27,
    "type": "asset",
  },
]
`;

exports[`webpack plugin default config 1`] = `
Array [
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [],
    "chunks": Array [],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "development": true,
      "size": 331477,
    },
    "isOverSizeLimit": false,
    "name": "bundle-stats.html",
    "related": Object {},
    "size": 331477,
    "type": "asset",
  },
  Object {
    "auxiliaryChunkIdHints": Array [],
    "auxiliaryChunkNames": Array [],
    "auxiliaryChunks": Array [],
    "cached": false,
    "chunkIdHints": Array [],
    "chunkNames": Array [
      "main",
    ],
    "chunks": Array [
      179,
    ],
    "comparedForEmit": false,
    "emitted": true,
    "filteredRelated": undefined,
    "info": Object {
      "javascriptModule": false,
      "minimized": true,
      "size": 27,
    },
    "isOverSizeLimit": false,
    "name": "main.js",
    "related": Object {},
    "size": 27,
    "type": "asset",
  },
]
`;
